--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-  <title>$MedicalProjects</title>
+  <title>$finesrve@ne</title>
 </head>
 
 <body>
